# wordle-gear-academy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
session-proxy/: .binpath  Cargo.toml
session-proxy/src/: lib.rs
session-proxy/wordle-state/: Cargo.toml
session-proxy/wordle-state/src/: lib.rs
wordle-game/: .binpath  Cargo.toml
wordle-game/io/: Cargo.toml
