[package]
name = "wordle-game-state"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd.workspace = true
gmeta = {  workspace = true, features = ["codegen"] }
session-proxy-io.workspace = true

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1", features = ["metawasm"] }
session-proxy-io.workspace = true
